@@ -59,6 +59,20 @@ internal class NoticeProcessorTest {
     }
 
     @Test
+    fun `raises CTCP reply received event with content when containing unicode chars`() {
+        val events = PrivmsgProcessor().process(
+                IrcMessage(emptyMap(), "acidburn!libby@root.localhost".toByteArray(), "NOTICE", params("#crashandburn", "\u0001PING 👩‍💻\u0001")))
+        assertEquals(1, events.size)
+
+        val event = events[0] as CtcpReplyReceived
+        assertEquals(TestConstants.time, event.metadata.time)
+        assertEquals(User("acidburn", "libby", "root.localhost"), event.user)
+        assertEquals("#crashandburn", event.target)
+        assertEquals("PING", event.type)
+        assertEquals("👩‍💻", event.content)
+    }
+
+    @Test
     fun `raises CTCP reply received event without content`() {
         val events = NoticeProcessor().process(
                 IrcMessage(emptyMap(), "acidburn!libby@root.localhost".toByteArray(), "NOTICE", params("#crashandburn", "\u0001PING\u0001")))
